[package]
name = "ralloc"
version = "1.0.0"
authors = ["ticki <ticki@users.noreply.github.com>"]

# URLs and paths
description = "An efficient alternative platform-agnostic allocator."
repository = "https://github.com/redox-os/ralloc"
readme = "README.md"

# Metadata
keywords = ["alloc", "malloc", "allocator", "ralloc", "redox"]
license = "MIT"

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = { git = "https://github.com/redox-os/syscall.git" }

[dependencies.clippy]
version = "0.0.80"
optional = true

[profile.release]
panic = "abort"
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[features]
default = ["allocator", "clippy", "tls"]
# ---
alloc_id = []
allocator = []
debugger = []
log = ["write", "alloc_id"]
no_log_lock = ["log"]
security = []
testing = ["log", "debugger"]
tls = []
unsafe_no_brk_lock = []
unsafe_no_mutex_lock = []
write = []
