[package]
name = "ralloc_shim"
version = "0.1.1"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Ticki"]

[profile.release]
panic = "abort"
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[target.'cfg(not(redox))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(redox)'.dependencies]
redox_syscall = { git = "https://github.com/redox-os/syscall.git" }
