[package]
name = "ralloc_shim"
version = "0.1.2"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Ticki"]

[profile.release]
panic = "abort"
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = { git = "https://github.com/redox-os/syscall.git" }
